--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Eugene 学习记录</title>
+  <title>Eugene 学习</title>
   <meta name="description" content="Eugene 的极简学习记录页面" />
   <meta name="color-scheme" content="light dark" />
   <style>
