--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
   <div class="container">
     <header>
       <div>
-        <div class="title">Hack Multimodal 学习记录</div>
-        <div class="muted">by Eugene · 轻量、无框架、单文件</div>
+        <div class="title">Hack Multimodal 学习</div>
+        <div class="muted">by Eugene · 轻量 无框架</div>
       </div>
       <nav class="toolbar">
         <input id="q" type="search" placeholder="搜索：标题/内容/标签" aria-label="搜索" />
@@ -102,12 +102,12 @@
     // * 支持最基础的 **粗体**、`行内代码`、换行
     const DATA = [
       {
-        title: "搭好极简学习记录页",
+        title: "学习记录页",
         date: "2025-09-29",
-        tags: ["setup", "log"],
-        content: "创建了一个无依赖的单文件页面，用于记录 Hack Multimodal 学习。支持搜索、排序、标签筛选。",
+        tags: ["Hack Multimodal"],
+        content: "用于记录 Hack Multimodal 学习的中文博客。",
         links: [
-          { text: "本页源码(本地)", url: "#" }
+          { text: "本页源码(本地)", url: "https://github.com/Aurora1094" }
         ]
       },
       // 在这里继续追加：
