--- a/index.html
+++ b/index.html
@@ -100,16 +100,26 @@
     // 说明：尽量只改这段 DATA；其余代码无需动。
     // 字段：title, date(YYYY-MM-DD), tags([..]), content(支持简短 Markdown 片段*), links([{text, url}])
     // * 支持最基础的 **粗体**、`行内代码`、换行
-    const DATA = [
-      {
-        title: "学习记录页",
-        date: "2025-09-29",
-        tags: ["Hack Multimodal"],
-        content: "用于记录 Hack Multimodal 学习的中文博客。",
-        links: [
-          { text: "本页源码(本地)", url: "https://github.com/Aurora1094" }
-        ]
-      },
+   const DATA = [
+  {
+    title: "搭好极简学习记录页",
+    date: "2025-09-29",
+    tags: ["begin"],
+    content: "创建了一个无依赖的单文件页面，用于记录 Hack Multimodal 学习。支持搜索、排序、标签筛选。",
+    links: [
+      { text: "本页源码(本地)", url: "#" }
+    ]
+  },
+  {
+    title: "CNN入门",
+    date: "2025-09-29",
+    tags: ["CNN"],
+    content: "CNN入门学习笔记",
+    links: [
+      { text: "notion", url: "https://humane-carp-561.notion.site/CNN-27d5bc418f4d80f192a8c32b02b5c232?source=copy_link" }
+    ]
+  }
+];
       // 在这里继续追加：
       // { title: "读论文: xxx", date: "2025-10-02", tags: ["paper"], content: "要点1\n要点2", links: [{text: "arXiv", url: "https://arxiv.org/abs/..."}] },
     ];
