--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <header>
       <div>
         <div class="title">Hack Multimodal 学习</div>
-        <div class="muted">by Eugene · 轻量 无框架</div>
+        <div class="muted">by Eugene · 轻量</div>
       </div>
       <nav class="toolbar">
         <input id="q" type="search" placeholder="搜索：标题/内容/标签" aria-label="搜索" />
@@ -103,10 +103,10 @@
    const DATA = 
      [
   {
-    title: "搭好极简学习记录页",
+    title: "学习记录页",
     date: "2025-09-29",
     tags: ["begin"],
-    content: "创建了一个无依赖的单文件页面，用于记录 Hack Multimodal 学习。支持搜索、排序、标签筛选。",
+    content: "记录 Hack Multimodal 学习",
     links: [
       { text: "本页源码(本地)", url: "#" }
     ]
@@ -118,6 +118,7 @@
     content: "CNN入门学习笔记",
     links: [
       { text: "notion", url: "https://humane-carp-561.notion.site/CNN-27d5bc418f4d80f192a8c32b02b5c232?source=copy_link" }
+      
     ]
   }
 ];
