--- a/index.html
+++ b/index.html
@@ -89,11 +89,12 @@
 
     <div class="empty" id="empty" hidden>没有匹配的记录。试试清空筛选或更换关键词。</div>
 
-    <footer>
-      <div>© <span id="year"></span> Eugene · <a href="https://github.com/" target="_blank" rel="noreferrer">GitHub Pages</a>
-      · 单文件版（index.html）</div>
-    </footer>
+   <footer>
+  <div>
+    © <span id="year"></span> Eugene · 
+    <a href="https://github.com/Aurora1094" target="_blank" rel="noreferrer">GitHub Pages</a>
   </div>
+</footer>
 
   <script>
     // === 1) 数据：在此处维护你的学习记录 ===
