--- a/index.html
+++ b/index.html
@@ -121,6 +121,16 @@
       { text: "notion", url: "https://humane-carp-561.notion.site/CNN-27d5bc418f4d80f192a8c32b02b5c232?source=copy_link" }
       
     ]
+  },
+        {
+    title: "RGB-D论文",
+    date: "2025-10-03",
+    tags: ["RGB-D"],
+    content: "RGB-D模型相关论文",
+    links: [
+      { text: "notion", url: "https://humane-carp-561.notion.site/research-2815bc418f4d80e58347cd7cef8c7a16?source=copy_link" }
+      
+    ]
   }
 ];
       // 在这里继续追加：
