--- a/index.html
+++ b/index.html
@@ -123,6 +123,16 @@
       { text: "notion", url: "https://humane-carp-561.notion.site/research-2815bc418f4d80e58347cd7cef8c7a16?source=copy_link" }
       
     ]
+  },
+        {
+    title: "VLM类多模态攻击论文",
+    date: "2025-10-08",
+    tags: ["多模态攻击""VLM"],
+    content: "VLM类多模态攻击相关论文",
+    links: [
+      { text: "notion", url: "https://humane-carp-561.notion.site/VLM-2875bc418f4d80ab8baddcc40c891eea?source=copy_link" }
+      
+    ]
   }
 ];
       // 在这里继续追加：
