--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         {
     title: "VLM类多模态攻击论文",
     date: "2025-10-08",
-    tags: ["多模态攻击""VLM"],
+    tags: ["多模态攻击","VLM"],
     content: "VLM类多模态攻击相关论文",
     links: [
       { text: "notion", url: "https://humane-carp-561.notion.site/VLM-2875bc418f4d80ab8baddcc40c891eea?source=copy_link" }
