--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     tags: ["记录"],
     content: "",
     links: [
-      { text: "学习记录", url: "https://humane-carp-561.notion.site/2885bc418f4d80289d89c747ce11addb?source=copy_link" }
+      { text: "啊啊啊我每天到底在干什么啊！！！", url: "https://humane-carp-561.notion.site/2885bc418f4d80289d89c747ce11addb?source=copy_link" }
       
     ]
   }
